0.13 to current

	Don't draw right padding on a truncated rightmost column of a transposed
	ls-like view.

	Made register's content being listed in normal rather then reversed order
	in :registers/:display menu.

	Fixed line number column not including padding to the left of it.

	Fixed local options not being loaded on Ctrl-W x.

	Fixed graphics of view mode not being hidden on activating menu, more or
	file info modes.

0.13-beta to 0.13 (2023-04-04)

	Made "withicase" and "withrcase" affect how files are sorted before
	comparison, otherwise they might not produce the intended effect.

	Reduced cursor flickering during incremental search in visual mode.  Patch
	by filterfalse.

	Fixed segfault on trying to expand "~username" path prefix with a huge
	length of the user name.

	Fixed user mappings replacing a mapping from Lua in an incomplete way
	which could lead to assertion or some unpredictable behaviour.

	Fixed map menus not listing mappings that accept a selector.

	Fixed handling mouse events in normal and view modes in single pane mode.

	Fixed :hideui not hiding anything on Windows.  Thanks to Ed Pavlov.

	Fixed segfaults on changing sibling directory or previewing directories in
	miller view while global sorting by groups is active.  Patch by filterfalse.

	Fixed cl processing selection it was used previously on instead of file
	under cursor when you run it twice in succession.

	Fixed graphics from miller view preview remaining visible when displaying
	dialogs, entering menus, switching tabs, activating more or file info
	modes.

	Fixed "rpreview:" of 'milleroptions' not being copied to new tabs.

	Fixed selection not being stashed by do and dp.

	Fixed memory issues inside ncurses when dialog is displayed in menu mode
	after resizing the terminal.

0.12.1 to 0.13-beta (2023-03-17)

	Changed implementation of `:compare grouppaths` to juxtapose only files
	with identical relative paths.  Patch by Alexandr Keyp (a.k.a. IAmKapuze).
